opam-version: "2.0"
name: "mneliada"
synopsis: ""
description: """
Multiplicative Non-commutative Linear Logic with Additive case and Applicative pattern matching
"""
license: ""
maintainer: "pizza964333@gmail.com"
authors: [ "Fayonnagan Piker" ]
homepage: "https://hub.darcs.net/Fayonnagan_Piker/mneliada"
bug-reports: ""
dev-repo: "darcs+https://hub.darcs.net/Fayonnagan_Piker/mneliada"
available: os = "linux" | os = "macos"
build: [
  ["opam" "config" "exec" "--" "dune" "subst"] {pinned}
  ["opam" "config" "exec" "--" "dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
install: ["opam" "config" "exec" "--" "dune" "install"]
run-test: ["dune" "runtest" "-p" name]
depends: [
  "ppx_implicits" {build & = "hg"}
  "ppx_monadic"
  "zarith"
]
pin-depends: [
  ["ppx_implicits.hg" "hg+https://bitbucket.org/Kamiel/ppx_implicits#76683cc35f69f7a152cbb65f3ae417acfe3b5adb"]
]
