(dirs .submodules)

(include_subdirs unqualified)

(library
 (name petri)
 (public_name mneliada.petri)
 (flags
  (:standard -ppx "../../_opam/lib/ppx_let/ppx.exe --as-ppx" -ppx
    "../../_opam/lib/ppx_monadic/ppx.exe --as-ppx" -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits_type_reduction -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits_type_reduction -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits_type_reduction -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits_type_reduction -ppx
    ../../_opam/lib/ppx_implicits/ppx_implicits_final_check))
 (libraries ppx_implicits.runtime zarith))
